[package]
name = "flashblocks-rpc"
version = "0.1.0"
edition = "2024"
license = "MIT"

[dependencies]
rollup-boost.workspace = true

# op-* crates come from the in-monorepo op-reth path deps; the rest come
# from the reth git rev (kept in sync with the parent rust/Cargo.toml).
reth-optimism-node = { path = "../../../op-reth/crates/node/" }
reth-optimism-cli = { path = "../../../op-reth/crates/cli/", default-features = false }
reth-optimism-primitives = { path = "../../../op-reth/crates/primitives/", default-features = false }
reth-optimism-chainspec = { path = "../../../op-reth/crates/chainspec/", default-features = false }
reth-optimism-rpc = { path = "../../../op-reth/crates/rpc/" }
reth-optimism-evm = { path = "../../../op-reth/crates/evm/", default-features = false }
reth-optimism-forks = { path = "../../../op-reth/crates/hardforks/", default-features = false }
reth-rpc-eth-api = { git = "https://github.com/paradigmxyz/reth", tag = "v2.3.0" }
reth-provider = { git = "https://github.com/paradigmxyz/reth", tag = "v2.3.0" }
reth-primitives-traits = { version = "0.4.1", default-features = false }
reth-node-builder = { git = "https://github.com/paradigmxyz/reth", tag = "v2.3.0", features = [
    "test-utils",
] }
reth-e2e-test-utils = { git = "https://github.com/paradigmxyz/reth", tag = "v2.3.0" }
reth-node-api = { git = "https://github.com/paradigmxyz/reth", tag = "v2.3.0" }
reth-tasks = { git = "https://github.com/paradigmxyz/reth", tag = "v2.3.0" }
reth-node-core = { git = "https://github.com/paradigmxyz/reth", tag = "v2.3.0" }
reth-db = { git = "https://github.com/paradigmxyz/reth", tag = "v2.3.0", default-features = false }
reth-tracing = { git = "https://github.com/paradigmxyz/reth", tag = "v2.3.0", default-features = false }
reth-rpc-server-types = { git = "https://github.com/paradigmxyz/reth", tag = "v2.3.0" }

alloy-eips.workspace = true
alloy-primitives.workspace = true
alloy-json-rpc.workspace = true
alloy-rpc-types.workspace = true
alloy-rpc-types-engine.workspace = true
alloy-rpc-types-eth.workspace = true
alloy-consensus.workspace = true
alloy-genesis.workspace = true
alloy-rpc-client.workspace = true
alloy-provider.workspace = true
op-alloy-network.workspace = true
op-alloy-consensus.workspace = true
op-alloy-rpc-types.workspace = true

tokio.workspace = true
tokio-tungstenite.workspace = true
url.workspace = true
tracing.workspace = true
clap.workspace = true
eyre.workspace = true
metrics.workspace = true
metrics-derive.workspace = true
serde_json.workspace = true
serde.workspace = true

jsonrpsee = { version = "0.26.0" }
futures-util = "0.3.31"
brotli = "8.0.1"
arc-swap = "1.7.1"

[[bin]]
name = "flashblocks-rpc"
path = "src/bin/main.rs"

[lib]
path = "src/lib.rs"
